--- a/public/stylesheets/search.css
+++ b/public/stylesheets/search.css
@@ -59,6 +59,8 @@ body {
     display: inline-flex;
     align-items: center;
     gap: 10px;
+    text-decoration:none;
+    color:inherit;
 }
 
 .brand-logo {
