--- a/views/app.ejs
+++ b/views/app.ejs
@@ -40,7 +40,7 @@
     <header class="app-header">
         <div class="header-content">
             <div class="logo-section">
-                <img src="/images/story.png" alt="小故事铺" class="logo-img">
+                <img src="/images/story.png" alt="小故事铺" class="logo-img" loading="lazy" decoding="async"/>
                 <span class="logo-text">小故事铺</span>
             </div>
             <div class="header-actions">
