--- a/views/redirect/index.ejs
+++ b/views/redirect/index.ejs
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>小故事铺 - 搜索精彩故事，发现温暖与惊喜</title>
     <link rel="icon" type="image/png" href="/images/story.png">
-    <link rel="stylesheet" href="/stylesheets/search.css">
-    <link rel="stylesheet" href="/stylesheets/all.min.css">
-    <link rel="stylesheet" href="/live2d/css/live2d.css"/>
+    <link rel="preload" href="/stylesheets/search.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="/stylesheets/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="/live2d/css/live2d.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+
     <script type="text/javascript" src="/javascripts/jquery.min.js"></script>
-    <script defer src="https://cloud.umami.is/script.js" data-website-id="9ff3dec1-fc8a-41cd-8de1-84e40212d86b"></script>
+    <script async src="https://cloud.umami.is/script.js" data-website-id="9ff3dec1-fc8a-41cd-8de1-84e40212d86b"></script>
     <script>
         function redirectHome(){
             const homepage = localStorage.getItem('homepage');
@@ -22,10 +23,10 @@
 </head>
     <body>
         <header class="home-header">
-            <div class="brand">
-                <img src="/images/story.png" alt="小故事铺" class="brand-logo">
+            <a href="/" class="brand">
+                <img src="/images/story.png" alt="小故事铺" class="brand-logo" loading="lazy" decoding="async"/>
                 <span class="brand-name">小故事铺</span>
-            </div>
+            </a>
             <button class="home-select" id="homeSelectBtn" aria-label="选择主页">
                 <i class="fas fa-home"></i>
             </button>
@@ -122,11 +123,11 @@
                 <span class="ball"></span>
             </div>
         </div>
-        <script type="text/javascript" src="/live2d/js/live2d.js"></script>
-        <script type="text/javascript" src="/live2d/js/message.js"></script>
-        <script type="text/javascript">
+        <script type="text/javascript" src="/live2d/js/live2d.js" async></script>
+        <script type="text/javascript" src="/live2d/js/message.js" async></script>
+        <script type="text/javascript" async>
             loadlive2d("live2d", "/live2d/model/xiaoban/model.json");
         </script>
-        <script src="/javascripts/search.js"></script>
+        <script src="/javascripts/search.js" defer></script>
     </body>
  </html>
