--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <link rel="preload" href="/stylesheets/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="preload" href="/stylesheets/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 
-    <script defer src="https://cloud.umami.is/script.js" data-website-id="9ff3dec1-fc8a-41cd-8de1-84e40212d86b" async></script>
+    <script async src="https://cloud.umami.is/script.js" data-website-id="9ff3dec1-fc8a-41cd-8de1-84e40212d86b" async></script>
 
     <link rel="canonical" href="https://www.storynook.cn/">
 
