--- a/views/redirect/index.ejs
+++ b/views/redirect/index.ejs
@@ -8,8 +8,8 @@
     <link rel="preload" href="/stylesheets/search.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="preload" href="/stylesheets/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="preload" href="/live2d/css/live2d.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-
     <script type="text/javascript" src="/javascripts/jquery.min.js"></script>
+
     <script async src="https://cloud.umami.is/script.js" data-website-id="9ff3dec1-fc8a-41cd-8de1-84e40212d86b"></script>
     <script>
         function redirectHome(){
@@ -123,9 +123,9 @@
                 <span class="ball"></span>
             </div>
         </div>
-        <script type="text/javascript" src="/live2d/js/live2d.js" async></script>
-        <script type="text/javascript" src="/live2d/js/message.js" async></script>
-        <script type="text/javascript" async>
+        <script type="text/javascript" src="/live2d/js/live2d.js"></script>
+        <script type="text/javascript" src="/live2d/js/message.js"></script>
+        <script type="text/javascript">
             loadlive2d("live2d", "/live2d/model/xiaoban/model.json");
         </script>
         <script src="/javascripts/search.js" defer></script>
