--- a/views/search.ejs
+++ b/views/search.ejs
@@ -8,6 +8,7 @@
     <link rel="preload" href="/stylesheets/search.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="preload" href="/stylesheets/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="preload" href="/live2d/css/live2d.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+
     <script type="text/javascript" src="/javascripts/jquery.min.js"></script>
 </head>
     <body>
@@ -90,9 +91,9 @@
                 <span class="ball"></span>
             </div>
         </div>
-        <script type="text/javascript" src="/live2d/js/live2d.js" async></script>
-        <script type="text/javascript" src="/live2d/js/message.js" async></script>
-        <script type="text/javascript" async>
+        <script type="text/javascript" src="/live2d/js/live2d.js"></script>
+        <script type="text/javascript" src="/live2d/js/message.js"></script>
+        <script type="text/javascript">
             loadlive2d("live2d", "/live2d/model/xiaoban/model.json");
         </script>
         <script src="/javascripts/search.js" defer></script>
