--- a/views/index.ejs
+++ b/views/index.ejs
@@ -189,6 +189,6 @@
         </div>
      </div>
 
-    <script src="/javascripts/main.js?v=20251113" defer></script>
+    <script src="/javascripts/main.js" defer></script>
   </body>
 </html>
