--- a/public/stylesheets/appCss.css
+++ b/public/stylesheets/appCss.css
@@ -717,7 +717,7 @@ pre{
 
 .category-settings-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    /*grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));*/
     gap: 12px;
 }
 
