--- a/views/app/app.ejs
+++ b/views/app/app.ejs
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" href="/images/story.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preload" href="/stylesheets/appCss.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <link rel="preload" href="/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="/stylesheets/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <script async src="https://cloud.umami.is/script.js" data-website-id="9ff3dec1-fc8a-41cd-8de1-84e40212d86b"></script>
     <!-- PC端检测脚本 -->
     <script>
