添加热力图
添加热力图

--- a/views/read/read.ejs
+++ b/views/read/read.ejs
@@ -7,6 +7,13 @@
     <link rel="preload" href="/stylesheets/read.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="preload" href="/stylesheets/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <script async src="https://cloud.umami.is/script.js" data-website-id="9ff3dec1-fc8a-41cd-8de1-84e40212d86b"></script>
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "u5emiysnjq");
+    </script>
 </head>
 
 <body>
