--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -11,6 +11,13 @@
     <script type="text/javascript" src="/javascripts/jquery.min.js"></script>
 
     <script async src="https://cloud.umami.is/script.js" data-website-id="9ff3dec1-fc8a-41cd-8de1-84e40212d86b"></script>
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "u5emiysnjq");
+    </script>
     <script>
         function redirectHome(){
             const homepage = localStorage.getItem('homepage');
