--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,14 @@
     <!-- SEO优化meta标签 -->
     <meta name="description" content="小故事铺是专业的故事阅读平台，提供睡前故事、儿童故事、历史故事、恐怖故事、爱情故事、励志故事等各类精彩小故事。免费在线阅读，每日更新优质故事内容。">
     <meta name="keywords" content="故事,小故事,故事平台,睡前故事,儿童故事,历史故事,恐怖故事,爱情故事,励志故事,故事大全,在线阅读,免费故事,故事网站,短篇故事,经典故事,温馨故事,感人故事,哄女朋友睡觉的小故事">
+
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "u5emiysnjq");
+    </script>
   </head>
 
   <body class="simple-mode">
