--- a/views/search/search.ejs
+++ b/views/search/search.ejs
@@ -10,6 +10,13 @@
     <link rel="preload" href="/live2d/css/live2d.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 
     <script type="text/javascript" src="/javascripts/jquery.min.js"></script>
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "u5emiysnjq");
+    </script>
 </head>
     <body>
         <header class="home-header">
