--- a/views/index.ejs
+++ b/views/index.ejs
@@ -197,6 +197,6 @@
         </div>
      </div>
 
-    <script src="/javascripts/main.js" defer></script>
+    <script src="/javascripts/main.js?v=20251113v1" defer></script>
   </body>
 </html>
