--- a/views/read/read.ejs
+++ b/views/read/read.ejs
@@ -21,7 +21,7 @@
         <div class="container">
             <div class="site-header-content">
                 <a href="/" class="site-brand">
-                    <img src="/images/story.png" alt="小故事铺" class="site-logo" loading="lazy" decoding="async"/>
+                    <img src="/images/story.png" alt="小故事铺" class="site-logo" style='width:32px;height:32px' loading="lazy" decoding="async"/>
                     <span class="site-title">小故事铺</span>
                 </a>
             </div>
