--- a/views/read/read.ejs
+++ b/views/read/read.ejs
@@ -50,23 +50,10 @@
                     </div>
                 </div>
 
-                <div class="article-content" id="storyContent"><% contentList.forEach(function(content){ %><p style="opacity: 1; transform: translateY(0px); transition: opacity 0.5s, transform 0.5s;"><%=content %></p><% }); %></div>
+                <div class="article-content" id="storyContent"><% contentList.forEach(function(content){ %><p><%=content %></p><% }); %></div>
             </div>
         </div>
     </main>
-<!--     <script> -->
-<!--         const pElementList = document.getElementById('storyContent').querySelectorAll('p'); -->
-<!--         pElementList.forEach((p, index) => { -->
-<!--             setTimeout(() => { -->
-<!--                 // 短暂延迟后显示段落 -->
-<!--                 setTimeout(() => { -->
-<!--                     p.style.transition = 'opacity 0.5s ease, transform 0.5s ease'; -->
-<!--                     p.style.opacity = '1'; -->
-<!--                     p.style.transform = 'translateY(0)'; -->
-<!--                 }, 50); -->
-<!--             }, 100 * Math.min(index, 5)); // 最多延迟5段，防止过长的故事有太长的加载时间 -->
-<!--         }); -->
-<!--     </script> -->
     <script src="/javascripts/read.js" defer></script>
 </body>
 </html>
