--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>小故事铺 - 搜索精彩故事，发现温暖与惊喜</title>
+    <title>小故事铺 - 故事小站 - 发现温暖与惊喜</title>
     <link rel="icon" type="image/png" href="/images/story.png">
     <link rel="preload" href="/stylesheets/search.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="preload" href="/stylesheets/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
