--- a/views/404/404.ejs
+++ b/views/404/404.ejs
@@ -12,7 +12,15 @@
     <header class="nf-header">
         <div class="nf-content">
             <a href="/" class="nf-brand">
-                <img src="/images/story.png" alt="小故事铺" class="nf-logo" loading="lazy" decoding="async" style="width:24px;height:24px"/>
+                 <img
+                  src="/images/logo/favicon-32x32.png"
+                  srcset="/images/logo/favicon-16x16.png 16w,
+                  /images/logo/favicon-32x32.png 32w,
+                  /images/logo/apple-touch-icon.png 180w"
+                  sizes="32px"
+                  decoding="async"
+                  alt="小故事铺"
+                />
                 <span class="nf-name">小故事铺</span>
             </a>
             <div class="nf-actions">
