--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,6 +44,8 @@
                           /images/logo/favicon-32x32.png 32w,
                           /images/logo/apple-touch-icon.png 180w"
                           sizes="32px"
+                          width="32"
+                          height="32"
                           decoding="async"
                           alt="小故事铺"
                         />
