--- a/views/read/read.ejs
+++ b/views/read/read.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title><%= storyTitle %> - <%= categoryName %> - 小故事铺 | 故事铺是一个专注于精选短篇故事的平台，涵盖睡前、恐怖、亲情、儿童等多个类型。每天更新精彩故事，陪你度过温暖或惊悚的时刻</title>
     <link rel="icon" type="image/png" href="/images/story.png">
-    <link href="/stylesheets/read.css" rel="stylesheet">
+    <link href="/stylesheets/read.css?v=20251120" rel="stylesheet">
 
     <link rel="preload" href="/stylesheets/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <script async src="https://cloud.umami.is/script.js" data-website-id="9ff3dec1-fc8a-41cd-8de1-84e40212d86b"></script>
@@ -62,6 +62,25 @@
             </div>
         </div>
     </main>
+    <footer class="site-footer">
+        <div class="container">
+            <div class="site-footer-content">
+                <section class="recommend-section" aria-labelledby="recommendTitle">
+                    <h2 class="recommend-header" id="recommendTitle">推荐故事</h2>
+                    <ul class="recommend-list">
+                        <% if (typeof recommendList !== 'undefined' && recommendList && recommendList.length > 0) { %>
+                        <% recommendList.slice(0, 3).forEach(function(story){ %>
+                            <li class="recommend-item">
+                                <a class="recommend-link" href="/story/<%=story.id %>" target="_blank" rel="noopener"><%=story.title %></a>
+
+                            </li>
+                        <% }) %>
+                        <% } %>
+                    </ul>
+                </section>
+            </div>
+        </div>
+    </footer>
     <script src="/javascripts/read.js" defer></script>
 </body>
 </html>
