--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>小故事铺 - 故事小站 - 发现温暖与惊喜</title>
     <link rel="icon" type="image/png" href="/images/story.png">
-    <link rel="preload" href="/stylesheets/search.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="/stylesheets/search.css?v=20251121" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="preload" href="/stylesheets/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="preload" href="/live2d/css/live2d.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <script type="text/javascript" src="/javascripts/jquery.min.js"></script>
